# netpulse

./: .gitignore  CHANGELOG-MANUAL.md  CHANGELOG.md  Cargo.toml  README.md  build
.github/workflows/: cargo.yaml  release.yaml
.zed/: tasks.json
data/: netpulsed.service
examples/media/: severity_over_time_default_dataset.html
scripts/: add_capabilities.sh  testenv.sh
src/: analyze.rs  checks.rs  common.rs  errors.rs  lib.rs  records.rs  store.rs
src/analyze/: graph.rs  outage.rs  testset.rs
src/bins/: common.rs  daemon.rs  netpulse.rs  netpulsectl.rs  netpulsed.rs
