[package]
default-run = "netpulse"
name = "netpulse"
version = "0.5.1"
edition = "2021"
publish = true
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "MIT"
description = "Keep track of if your internet is still alive, collect stats against a crappy ISP"
readme = "README.md"
homepage = "https://github.com/PlexSheep/netpulse"
repository = "https://github.com/PlexSheep/netpulse"

[features]
default = ["compression", "http", "ping", "executable"]
compression = ["dep:zstd"]
ping = ["dep:ping"]
http = ["dep:curl"]
executable = ["dep:tracing-subscriber"]

[dependencies]
getopts = "0.2"
serde = { version = "1.0", features = ["derive"] }
daemonize = "0.5"
bincode = "1.3.3"
flagset = { version = "0.4.6", features = ["serde"] }
thiserror = "2.0.0"
zstd = { version = "0.13.2", optional = true }
nix = { version = "0.29.0", features = ["signal", "process", "user"] }
ping = { version = "0.5.2", optional = true }
curl = { version = "0.4.47", optional = true, default-features = false }
caps = "0.5.5"
deepsize = "0.2.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", optional = true }
chrono = { version = "0.4.38", optional = false }

[[bin]] # client
name = "netpulse"
path = "src/bins/netpulse.rs"
required-features = ["executable"]

[[bin]] # daemon and controlling it
name = "netpulsed"
path = "src/bins/netpulsed.rs"
required-features = ["executable"]

[package.metadata."docs.rs"]
all-features = true
